deploy/mongodb.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongodb
  labels:
    app: mongodb
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mongodb
  template:
    metadata:
      labels:
        app: mongodb
    spec:
      containers:
        - name: mongodb
          image: mongo
          args: ["--dbpath", "/data/db", "--port", "27017"]
          volumeMounts:
            - name: mongodb-volume
              mountPath: "/data/db/"
      volumes:
        - name: mongodb-volume
          persistentVolumeClaim:
            claimName: mongodb-volume
---
apiVersion: v1
kind: Service
metadata:
  name: mongodb-service
spec:
  selector:
    app: mongodb
  ports:
    - protocol: TCP
      port: 27017
      targetPort: 27017
