deploy/oauth2.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: oauth2-server
  labels:
    app: oauth2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: oauth2
  template:
    metadata:
      labels:
        app: oauth2
    spec:
      containers:
        - name: oauth2-backend
          #image: oauth2
          #imagePullPolicy: Never
          image: us-central1-docker.pkg.dev/innate-concept-409007/docker-repo/oauth2:v0.0.2
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: oauth2-dashboard
  labels:
    app: oauth2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: oauth2
  template:
    metadata:
      labels:
        app: oauth2
    spec:
      containers:
        - name: oauth2-dashboard
          image: us-central1-docker.pkg.dev/innate-concept-409007/docker-repo/dashboard:v0.0.2
          #imagePullPolicy: Never
---
apiVersion: v1
kind: Service
metadata:
  name: oauth2-service-server
  annotations:
    cloud.google.com/neg: '{"ingress": true}'
  labels:
    app: oauth2
spec:
  #type: NodePort
  selector:
    app: oauth2
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
      #nodePort: 30001
---
apiVersion: v1
kind: Service
metadata:
  name: oauth2-service-dashboard
  annotations:
    cloud.google.com/neg: '{"ingress": true}'
  labels:
    app: oauth2
spec:
  #type: NodePort
  selector:
    app: oauth2
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
      #nodePort: 30002
