deploy/website.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: osc-website
  labels:
    app: osc-website
spec:
  replicas: 1
  selector:
    matchLabels:
      app: osc-website
  template:
    metadata:
      labels:
        app: osc-website
    spec:
      containers:
        - name: club-website
          #image: osc-website
          image: us-central1-docker.pkg.dev/innate-concept-409007/docker-repo/club-website:v1.0.3
          #imagePullPolicy: Never
---
apiVersion: v1
kind: Service
metadata:
  name: osc-website-service
  annotations:
    cloud.google.com/neg: '{"ingress": true}'
  labels:
    app: osc-website
spec:
  #type: NodePort
  selector:
    app: osc-website
  ports:
    - protocol: TCP
      port: 3002
      targetPort: 3002
      #nodePort: 30000
