deploy/websmtp.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: websmtp
  labels:
    app: websmtp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: websmtp
  template:
    metadata:
      labels:
        app: websmtp
    spec:
      containers:
        - name: websmtp
          #image: websmtp
          #imagePullPolicy: Never
          image: us-central1-docker.pkg.dev/innate-concept-409007/docker-repo/websmtp:v0.0.2
---
apiVersion: v1
kind: Service
metadata:
  name: websmtp-service
spec:
  selector:
    app: websmtp
  ports:
    - protocol: TCP
      port: 3001
      targetPort: 8080
