deploy/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ufosc-ingress
  annotations:
    ingressClassName: "gce"
    kubernetes.io/ingress.global-static-ip-name: oscwebsite
    networking.gke.io/managed-certificates: ufosc-cert
    networking.gke.io/v1beta1.FrontendConfig: ufosc-fe-config
spec:
  rules:
    - host: "ufosc.org"
      defaultBackend:
        service:
          name: osc-website-service
          port:
            number: 3002
    - host: "testing.ufosc.org"
      defaultBackend:
        service:
          name: oauth2-service-dashboard
          port:
            number: 3000
    - host: "api.testing.ufosc.org"
      defaultBackend:
        service:
          name: oauth2-service-server
          port:
            number: 8080
